# xenonpass

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  go.mod
.github/workflows/: c-vault.yml  go-api.yml  go.yml  integration.yml  rust-ci.yml  security.yml  svelte.yml
api/: handlers.go  handlers_test.go  middleware.go  middleware_test.go  models.go  server.go  server_test.go  store_test.go  vault_cgo.go
cli/: entry.c  entry.h  main.c
cmd/server/: main.go
src/: main.rs
src/ffi/: mod.rs
src/vault/: crypto.c  io.c  mem.c
src/vault/include/: xpass.h
tests/: test_cli_path.c  test_ffi.rs  test_vault.c
vault/: crypto.c  io.c  kdf.c  mem.c
vault/include/: xpass.h
ws/: README.md  package.json
ws/src/lib/: api.ts
ws/src/routes/: +page.svelte
